--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <p><a href="lab7.html">Звіт до лабораторної роботи №7. Тема -  Адресація</a></p>
    </div>
    <div class="clear"></div>
-   <div id="footer">&copy; Сайт-звіт до лабораторних робіт студента (ки) 1 курсу групи "Фізики"</div>
+   <div id="footer">&copy; Сайт-звіт до лабораторних робіт студента (ки) 1 курсу Чжан Чи групи "Фізики"</div>
   </div>
  </body>
 </html>
