--- a/lab3.html
+++ b/lab3.html
@@ -55,7 +55,7 @@
   <div id="container">
    <div id="header">Сайт-звіт до лабораторних робіт студента (ки) 1 курсу групи "Фізики"</div>
    <div id="content">
-    <h2>Звіт до лабораторної роботи №3. Тема</h2>
+    <h2>Звіт до лабораторної роботи №3. Тема - Google малюнок</h2>
    </div>
    <div id="sidebar">
    <p><a href="index.html">Домашня сторінка</a></p>
