--- a/lab2.html
+++ b/lab2.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <meta charset="utf-8" />
-  <title>Сайт-звіт до лабораторних робіт студента (ки) 1 курсу групи "Фізики"</title>
+  <title>Сайт-звіт до лабораторних робіт студента (ки) 1 курсу Чжан Чи групи "Фізики"</title>
   <style type="text/css">
    body {
     font: 10pt Arial, Helvetica, sans-serif; /* Шрифт на веб-странице */
@@ -53,7 +53,7 @@
  </head>
  <body>
   <div id="container">
-   <div id="header">Сайт-звіт до лабораторних робіт студента (ки) 1 курсу групи "Фізики"</div>
+   <div id="header">Сайт-звіт до лабораторних робіт студента (ки) 1 курсу Чжан Чи групи "Фізики"</div>
    <div id="content">
     <h2>Звіт до лабораторної роботи №2. Тема - Форматування за зразком</h2>
    </div>
@@ -65,6 +65,7 @@
     <p><a href="lab4.html">Звіт до лабораторної роботи №4. Тема - Табличний процессор </a></p>
     <p><a href="lab5.html">Звіт до лабораторної роботи №5-6. Тема - Табличний процессор</a></p>
     <p><a href="lab7.html">Звіт до лабораторної роботи №7. Тема -  Адресація</a></p>
+    <p><a href="lab7.html">Звіт до лабораторної роботи №9. Тема - Гугл презентація</a></p>
    </div>
    <div class="clear"></div>
    <div id="footer">&copy; Сайт-звіт до лабораторних робіт студента (ки) 1 курсу Чжан Чи групи "Фізики"</div>
