--- a/lab9.html
+++ b/lab9.html
@@ -56,6 +56,7 @@
    <div id="header">Сайт-звіт до лабораторних робіт студента (ки) 1 курсу групи "Фізики"</div>
    <div id="content">
     <h2>Звіт до лабораторної роботи №7. Тема -  Адресація</h2>
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vT03RhKtEumYnMQxjKen7YbBJb0Xe9rksR880Qsor8Yhs5Oa6b057fXOQOvTCbzPdO1IkzyuYy5BhMT/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
    </div>
    <div id="sidebar">
    <p><a href="index.html">Домашня сторінка</a></p>
