--- a/lab9.html
+++ b/lab9.html
@@ -57,6 +57,10 @@
    <div id="content">
     <h2>Звіт до лабораторної роботи №7. Тема -  Адресація</h2>
     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vT03RhKtEumYnMQxjKen7YbBJb0Xe9rksR880Qsor8Yhs5Oa6b057fXOQOvTCbzPdO1IkzyuYy5BhMT/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+   <p><a href="lab9.pptx">Завантажити у форматі pptx</a></p>
+    <p><a href="lab9.odp">Завантажити у форматі odpx</a></p>
+    <p><a href="https://docs.google.com/presentation/d/e/2PACX-1vT03RhKtEumYnMQxjKen7YbBJb0Xe9rksR880Qsor8Yhs5Oa6b057fXOQOvTCbzPdO1IkzyuYy5BhMT/pub?start=false&loop=false&delayms=3000">Переглянути з Гугл диску</a></p>
+   <iframe src="lab9.pdf" width="100%" height="500"></iframe>
    </div>
    <div id="sidebar">
    <p><a href="index.html">Домашня сторінка</a></p>
