--- a/lab3.html
+++ b/lab3.html
@@ -56,6 +56,8 @@
    <div id="header">Сайт-звіт до лабораторних робіт студента (ки) 1 курсу Чжан Чи групи "Фізики"</div>
    <div id="content">
     <h2>Звіт до лабораторної роботи №3. Тема - Google малюнок</h2>
+    <img src="https://docs.google.com/drawings/d/e/2PACX-1vSVj5uKO9kMZvBJqlV5LRlbgqiRYdHTaEMaLazOhitK0AQP-4DJjXokwWK-sfLTzDLrRaEMBkvH1d6S/pub?w=960&amp;h=720">
+    <img src="lab3.png" alt="мій звіт">
    </div>
    <div id="sidebar">
    <p><a href="index.html">Домашня сторінка</a></p>
