--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
  </head>
  <body>
   <div id="container">
-   <div id="header">Сайт-звіт до лабораторних робіт студента (ки) 1 курсу групи "Фізики"</div>
+   <div id="header">Сайт-звіт до лабораторних робіт студента (ки) 1 курсу Чжан Чи групи "Фізики"</div>
    <div id="content">
-    <h2>Сайт-звіт до лабораторних робіт студента (ки) 1 курсу групи "Фізики"</h2>
+    <h2>Сайт-звіт до лабораторних робіт студента (ки) 1 курсу Чжан Чи групи "Фізики"</h2>
    </div>
    <div id="sidebar">
    <p><a href="index.html">Домашня сторінка</a></p>
