--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <p><a href="lab2.html">Звіт до лабораторної роботи №2. Тема - Форматування за зразком</a></p>
     <p><a href="lab3.html">Звіт до лабораторної роботи №3. Тема - Google малюнок</a></p>
     <p><a href="lab4.html">Звіт до лабораторної роботи №4. Тема - Табличний процессор </a></p>
-    <p><a href="lab5.html">Звіт до лабораторної роботи №5-6. Тема - Табличний процессор</a></p>
+    <p><a href="lab5.html">Звіт до лабораторної роботи №5. Тема - Табличний процессор</a></p>
     <p><a href="lab7.html">Звіт до лабораторної роботи №7. Тема -  Адресація</a></p>
    </div>
    <div class="clear"></div>
