--- a/lab4.html
+++ b/lab4.html
@@ -64,7 +64,9 @@
     <p><a href="lab3.html">Звіт до лабораторної роботи №3. Тема - Google малюнок</a></p>
     <p><a href="lab4.html">Звіт до лабораторної роботи №4. Тема - Табличний процессор </a></p>
     <p><a href="lab5.html">Звіт до лабораторної роботи №5. Тема - Табличний процессор</a></p>
-    <p><a href="lab9.html">Звіт до лабораторної роботи №7. Тема -  Адресація</a></p>
+    <p><a href="lab7.html">Звіт до лабораторної роботи №7. Тема -  Адресація</a></p>
+    <p><a href="lab8.html">Звіт до лабораторної роботи №8. Тема -  Презентація з БЖД</a></p>
+    <p><a href="lab9.html">Звіт до лабораторної роботи №9. Тема - Гугл презентація</a></p>
    </div>
    <div class="clear"></div>
    <div id="footer">&copy; Сайт-звіт до лабораторних робіт студента (ки) 1 курсу Чжан Чи групи "Фізики"</div>
