--- a/lab9.html
+++ b/lab9.html
@@ -55,7 +55,7 @@
   <div id="container">
    <div id="header">Сайт-звіт до лабораторних робіт студента (ки) 1 курсу групи "Фізики"</div>
    <div id="content">
-    <h2>Звіт до лабораторної роботи №7. Тема -  Адресація</h2>
+    <h2>Звіт до лабораторної роботи №9. Тема - Гугл презентація</h2>
     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vT03RhKtEumYnMQxjKen7YbBJb0Xe9rksR880Qsor8Yhs5Oa6b057fXOQOvTCbzPdO1IkzyuYy5BhMT/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
    <p><a href="lab9.pptx">Завантажити у форматі pptx</a></p>
     <p><a href="lab9.odp">Завантажити у форматі odpx</a></p>
