--- a/lab1.html
+++ b/lab1.html
@@ -59,7 +59,8 @@
     <iframe src="https://docs.google.com/document/d/e/2PACX-1vSrd36lzEu3ZXJ6WSdr5L56U-WlsAK_11_wKlKETXUe8UkcFOCXJB6eoRplkU-1P6qEKaRI00rg2b8H/pub?embedded=true"></iframe>
     <p><a href="lab1.docx">Завантажити у форматі docx</a></p>
     <p><a href="lab1.odt">Завантажити у форматі odt</a></p>
-    <p><a href="lab1.pdf">Завантажити у форматі pdf</a></p>  
+    <p><a href="https://docs.google.com/document/d/e/2PACX-1vSrd36lzEu3ZXJ6WSdr5L56U-WlsAK_11_wKlKETXUe8UkcFOCXJB6eoRplkU-1P6qEKaRI00rg2b8H/pub"
+     <iframe src="lab9.pdf" width="100%" height="500"></iframe>
    </div>
    <div id="sidebar">
    <p><a href="index.html">Домашня сторінка</a></p>
