--- a/lab1.html
+++ b/lab1.html
@@ -56,11 +56,11 @@
    <div id="header">Сайт-звіт до лабораторних робіт студента (ки) 1 курсу Чжан Чи групи "Фізики"</div>
    <div id="content">
     <h2>Звіт до лабораторної роботи №1. Тема - Текстовий процесор</h2>
-   <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vT03RhKtEumYnMQxjKen7YbBJb0Xe9rksR880Qsor8Yhs5Oa6b057fXOQOvTCbzPdO1IkzyuYy5BhMT/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-   <p><a href="lab9.pptx">Завантажити у форматі pptx</a></p>
-    <p><a href="lab9.odp">Завантажити у форматі odpx</a></p>
-    <p><a href="https://docs.google.com/presentation/d/e/2PACX-1vT03RhKtEumYnMQxjKen7YbBJb0Xe9rksR880Qsor8Yhs5Oa6b057fXOQOvTCbzPdO1IkzyuYy5BhMT/pub?start=false&loop=false&delayms=3000">Переглянути з Гугл диску</a></p>
-   <iframe src="lab9.pdf" width="100%" height="500"></iframe>
+<iframe src="https://docs.google.com/document/d/e/2PACX-1vSrd36lzEu3ZXJ6WSdr5L56U-WlsAK_11_wKlKETXUe8UkcFOCXJB6eoRplkU-1P6qEKaRI00rg2b8H/pub?embedded=true"></iframe>
+   <p><a href="lab1.docx">Завантажити у форматі docx</a></p>
+    <p><a href="lab1.odt">Завантажити у форматі odpt</a></p>
+    <p><a href="https://docs.google.com/document/d/e/2PACX-1vSrd36lzEu3ZXJ6WSdr5L56U-WlsAK_11_wKlKETXUe8UkcFOCXJB6eoRplkU-1P6qEKaRI00rg2b8H/pub">Переглянути з Гугл диску</a></p>
+   <iframe src="lab1.pdf" width="100%" height="500"></iframe>
    </div>
    <div id="sidebar">
    <p><a href="index.html">Домашня сторінка</a></p>
