--- a/lab1.html
+++ b/lab1.html
@@ -56,6 +56,7 @@
    <div id="header">Сайт-звіт до лабораторних робіт студента (ки) 1 курсу Чжан Чи групи "Фізики"</div>
    <div id="content">
     <h2>Звіт до лабораторної роботи №1. Тема - Текстовий процесор</h2>
+    
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vSrd36lzEu3ZXJ6WSdr5L56U-WlsAK_11_wKlKETXUe8UkcFOCXJB6eoRplkU-1P6qEKaRI00rg2b8H/pub?embedded=true"></iframe>
     <p><a href="lab1.docx" Завантажити у форматі docx></a></p>
     <p><a href="lab1.odt" Завантажити у форматі odt></a></p>
@@ -64,14 +65,14 @@
          </div>
    <div id="sidebar">
    <p><a href="index.html">Домашня сторінка</a></p>
-    <p><a href="lab1.html">Звіт до лабораторної роботи №1. Тема - Текстовий процесор</a></p>
-    <p><a href="lab2.html">Звіт до лабораторної роботи №2. Тема - Форматування за зразком</a></p>
-    <p><a href="lab3.html">Звіт до лабораторної роботи №3. Тема - Google малюнок</a></p>
-    <p><a href="lab4.html">Звіт до лабораторної роботи №4. Тема - Табличний процессор </a></p>
-    <p><a href="lab5.html">Звіт до лабораторної роботи №5. Тема - Табличний процессор</a></p>
-    <p><a href="lab7.html">Звіт до лабораторної роботи №7. Тема -  Адресація</a></p>
-    <p><a href="lab8.html">Звіт до лабораторної роботи №8. Тема -  Презентація з БЖД</a></p>
-    <p><a href="lab9.html">Звіт до лабораторної роботи №9. Тема - Гугл презентація</a></p>
+    <p><a href="lab1.html">Звіт до лабораторної роботи №1. Тема - Текстовий процесор></a></p>
+    <p><a href="lab2.html">Звіт до лабораторної роботи №2. Тема - Форматування за зразком></a></p>
+    <p><a href="lab3.html">Звіт до лабораторної роботи №3. Тема - Google малюнок></a></p>
+    <p><a href="lab4.html">Звіт до лабораторної роботи №4. Тема - Табличний процессор> </a></p>
+    <p><a href="lab5.html">Звіт до лабораторної роботи №5. Тема - Табличний процессор></a></p>
+    <p><a href="lab7.html">Звіт до лабораторної роботи №7. Тема -  Адресація></a></p>
+    <p><a href="lab8.html">Звіт до лабораторної роботи №8. Тема -  Презентація з БЖД></a></p>
+    <p><a href="lab9.html">Звіт до лабораторної роботи №9. Тема - Гугл презентація></a></p>
    </div>
    <div class="clear"></div>
    <div id="footer">&copy; Сайт-звіт до лабораторних робіт студента (ки) 1 курсу Чжан Чи групи "Фізики"</div>
