--- a/lab2.html
+++ b/lab2.html
@@ -56,6 +56,10 @@
    <div id="header">Сайт-звіт до лабораторних робіт студента (ки) 1 курсу Чжан Чи групи "Фізики"</div>
    <div id="content">
     <h2>Звіт до лабораторної роботи №2. Тема - Форматування за зразком</h2>
+    <iframe src="https://docs.google.com/document/d/e/2PACX-1vQvknPwEDRJcIs-LvWMvpUYqHFC7WDKEMuBYJoBUwtRC_cdgtdQK1NmUSXcDHQInE8DULX4oK2-nvGT/pub?embedded=true"></iframe>
+   <p><a href
+   
+   
    </div>
    <div id="sidebar">
    <p><a href="index.html">Домашня сторінка</a></p>
