--- a/lab2.html
+++ b/lab2.html
@@ -60,18 +60,18 @@
     <p><a href="lab2.docx"> Завантадити у форматі docx </a></p>
     <p><a href="lab2.odt"> Завантадити у форматі odt </a></p>
     <p><a href="https://docs.google.com/document/d/e/2PACX-1vQvknPwEDRJcIs-LvWMvpUYqHFC7WDKEMuBYJoBUwtRC_cdgtdQK1NmUSXcDHQInE8DULX4oK2-nvGT/pub"> Перелянути з Гугл диску</a></p>
-   <iframe src="lab2.pdf" width="100%" height="500"</iframe>
+   <iframe src="lab2.pdf" width="100%" height="500" </iframe>
    </div>
    <div id="sidebar">
    <p><a href="index.html">Домашня сторінка</a></p>
-      <p><a href="lab1.html">Звіт до лабораторної роботи №1. Тема - Текстовий процесор</a></p>
-     <p><a href="lab2.html">Звіт до лабораторної роботи №2. Тема - Форматування за зразком</a></p>
-     <p><a href="lab3.html">Звіт до лабораторної роботи №3. Тема - Google малюнок</a></p>
-     <p><a href="lab4.html">Звіт до лабораторної роботи №4. Тема - Табличний процессор </a></p>
-     <p><a href="lab5.html">Звіт до лабораторної роботи №5. Тема - Табличний процессор</a></p>
-     <p><a href="lab7.html">Звіт до лабораторної роботи №7. Тема -  Адресація</a></p>
-     <p><a href="lab8.html">Звіт до лабораторної роботи №8. Тема -  Презентація з БЖД</a></p>
-     <p><a href="lab9.html">Звіт до лабораторної роботи №9. Тема - Гугл презентація</a></p>
+      <p><a href="lab1.html">Звіт до лабораторної роботи №1. Тема - Текстовий процесор></a></p>
+     <p><a href="lab2.html">Звіт до лабораторної роботи №2. Тема - Форматування за зразком></a></p>
+     <p><a href="lab3.html">Звіт до лабораторної роботи №3. Тема - Google малюнок></a></p>
+     <p><a href="lab4.html">Звіт до лабораторної роботи №4. Тема - Табличний процессор></a></p>
+     <p><a href="lab5.html">Звіт до лабораторної роботи №5. Тема - Табличний процессор></a></p>
+     <p><a href="lab7.html">Звіт до лабораторної роботи №7. Тема -  Адресація></a></p>
+     <p><a href="lab8.html">Звіт до лабораторної роботи №8. Тема -  Презентація з БЖД></a></p>
+     <p><a href="lab9.html">Звіт до лабораторної роботи №9. Тема - Гугл презентація></a></p>
    </div>
    <div class="clear"></div>
    <div id="footer">&copy; Сайт-звіт до лабораторних робіт студента (ки) 1 курсу Чжан Чи групи "Фізики"</div>
