--- a/lab2.html
+++ b/lab2.html
@@ -57,8 +57,8 @@
    <div id="content">
     <h2>Звіт до лабораторної роботи №2. Тема - Форматування за зразком</h2>
    <iframe src="https://docs.google.com/document/d/e/2PACX-1vQvknPwEDRJcIs-LvWMvpUYqHFC7WDKEMuBYJoBUwtRC_cdgtdQK1NmUSXcDHQInE8DULX4oK2-nvGT/pub?embedded=true"></iframe>
-    <p><a href="lab2.docx"> Завантадити у форматі docx</a></p>
-    <p><a href="lab2.odt"> Завантадити у форматі odt</a></p>
+    <p><a href="lab2.docx"> Завантажити у форматі docx</a></p>
+    <p><a href="lab2.odt"> Завантажити у форматі odt</a></p>
     <p><a href="https://docs.google.com/document/d/e/2PACX-1vQvknPwEDRJcIs-LvWMvpUYqHFC7WDKEMuBYJoBUwtRC_cdgtdQK1NmUSXcDHQInE8DULX4oK2-nvGT/pub"> Перелянути з Гугл диску</a></p>
    <iframe src="lab2.pdf" width="100%" height="500" </iframe>
    </div>
