--- a/lab2.html
+++ b/lab2.html
@@ -56,16 +56,14 @@
    <div id="header">Сайт-звіт до лабораторних робіт студента (ки) 1 курсу Чжан Чи групи "Фізики"</div>
    <div id="content">
     <h2>Звіт до лабораторної роботи №2. Тема - Форматування за зразком</h2>
-    
-   <iframe src="https://docs.google.com/document/d/e/2PACX-1vQvknPwEDRJcIs-LvWMvpUYqHFC7WDKEMuBYJoBUwtRC_cdgtdQK1NmUSXcDHQInE8DULX4oK2-nvGT/pub?embedded=true"></iframe>
-     <p><a href="lab2.docx"> Завантажити у форматі docx</a></p>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vQvknPwEDRJcIs-LvWMvpUYqHFC7WDKEMuBYJoBUwtRC_cdgtdQK1NmUSXcDHQInE8DULX4oK2-nvGT/pub?embedded=true"></iframe>
+    <p><a href="lab2.docx"> Завантажити у форматі docx</a></p>
     <p><a href="lab2.odt"> Завантажити у форматі odt</a></p>
-    <p><a href="https://docs.google.com/document/d/e/2PACX-1vQvknPwEDRJcIs-LvWMvpUYqHFC7WDKEMuBYJoBUwtRC_cdgtdQK1NmUSXcDHQInE8DULX4oK2-nvGT/pub"> Перелянути з Гугл диску</a></p>
-    <iframe src="lab2.pdf" width="100%" height="500"</iframe>
-    
-   </div>
+   <p><a href="https://docs.google.com/document/d/e/2PACX-1vQvknPwEDRJcIs-LvWMvpUYqHFC7WDKEMuBYJoBUwtRC_cdgtdQK1NmUSXcDHQInE8DULX4oK2-nvGT/pub"> Переглянути з Гугл диску</a></p>      
+         <iframe src="lab2.pdf" width="100%" height="500"></iframe>
+         </div>
    <div id="sidebar">
-    <p><a href="index.html">Домашня сторінка</a></p>
+  <p><a href="index.html">Домашня сторінка</a></p>
       <p><a href="lab1.html">Звіт до лабораторної роботи №1. Тема - Текстовий процесор></a></p>
      <p><a href="lab2.html">Звіт до лабораторної роботи №2. Тема - Форматування за зразком></a></p>
      <p><a href="lab3.html">Звіт до лабораторної роботи №3. Тема - Google малюнок></a></p>
