--- a/lab5.html
+++ b/lab5.html
@@ -56,6 +56,9 @@
    <div id="header">Сайт-звіт до лабораторних робіт студента (ки) 1 курсу Чжан Чи групи "Фізики"</div>
    <div id="content">
     <h2>Звіт до лабораторної роботи №5. Тема - Табличний процессор</h2>
+    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTtcUjZWkwqFIsKTdP4bpSpCkrNLedkfJVI2cUzm4yiaOyUnxT-TaC5FBdcDgI7zFvoGnpJ8hJ8SUuu/pubhtml?widget=true&amp;headers=false"></iframe>
+    <p><a href="lab5.xlsx"> Завантажити у форматі docx</a></p>
+    <p><a href="lab5.xlsx.ods"> Завантажити у форматі odt</a></p>
    </div>
    <div id="sidebar">
    <p><a href="index.html">Домашня сторінка</a></p>
