--- a/lab5.html
+++ b/lab5.html
@@ -59,6 +59,7 @@
     <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTtcUjZWkwqFIsKTdP4bpSpCkrNLedkfJVI2cUzm4yiaOyUnxT-TaC5FBdcDgI7zFvoGnpJ8hJ8SUuu/pubhtml?widget=true&amp;headers=false"></iframe>
     <p><a href="lab5.xlsx"> Завантажити у форматі docx</a></p>
     <p><a href="lab5.xlsx.ods"> Завантажити у форматі odt</a></p>
+    <p><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTtcUjZWkwqFIsKTdP4bpSpCkrNLedkfJVI2cUzm4yiaOyUnxT-TaC5FBdcDgI7zFvoGnpJ8hJ8SUuu/pubhtml">Переглянути з Гугл диску</a></p>
    </div>
    <div id="sidebar">
    <p><a href="index.html">Домашня сторінка</a></p>
