--- a/lab4.html
+++ b/lab4.html
@@ -58,8 +58,8 @@
     <h2>Звіт до лабораторної роботи №4. Тема - Табличний процессор</h2>
    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQznxuJ3-2whTJRbp4vazc4kjeA_-aQvPNw9TaJjS55TpRRX1ldc38tykuqXM17-g/pubhtml?widget=true&amp;headers=false"></iframe>
     <p><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQznxuJ3-2whTJRbp4vazc4kjeA_-aQvPNw9TaJjS55TpRRX1ldc38tykuqXM17-g/pubhtml"> Переглянути з Гугл диску</a></p>
-    <p><a href="lab4.xlsx"> Завантажити у форматі docx</a></p>
-    <p><a href="lab4.xlsx.ods"> Завантажити у форматі odt</a></p>
+    <p><a href="lab4.xlsx"> Завантажити у форматі xlsx</a></p>
+    <p><a href="lab4.xlsx.ods"> Завантажити у форматі xlsx.ods</a></p>
    </div>
    <div id="sidebar">
    <p><a href="index.html">Домашня сторінка</a></p>
