--- a/lab5.html
+++ b/lab5.html
@@ -57,7 +57,7 @@
    <div id="content">
     <h2>Звіт до лабораторної роботи №5. Тема - Табличний процессор</h2>
     <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTtcUjZWkwqFIsKTdP4bpSpCkrNLedkfJVI2cUzm4yiaOyUnxT-TaC5FBdcDgI7zFvoGnpJ8hJ8SUuu/pubhtml?widget=true&amp;headers=false"></iframe>
-    <p><a href="lab5.xlsx"> Завантажити у форматі xlsx/a></p>
+    <p><a href="lab5.xlsx"> Завантажити у форматі xlsx</a></p>
     <p><a href="lab5.ods"> Завантажити у форматі ods</a></p>
     <p><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTtcUjZWkwqFIsKTdP4bpSpCkrNLedkfJVI2cUzm4yiaOyUnxT-TaC5FBdcDgI7zFvoGnpJ8hJ8SUuu/pubhtml">Переглянути з Гугл диску</a></p>
    </div>
