--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
     <p><a href="lab7.html">Звіт до лабораторної роботи №7. Тема -  Адресація</a></p>
     <p><a href="lab8.html">Звіт до лабораторної роботи №8. Тема -  Презентація з БЖД</a></p>
     <p><a href="lab9.html">Звіт до лабораторної роботи №9. Тема - Гугл презентація</a></p>
+    <p><a href="kr1.html">Звіт до контрольної роботи №1. Тема -  Текстовий редактор </a></p>
+    <p><a href="kr2.html">Звіт до контрольної роботи №2. Тема - Табличний редактор </a></p>
+    
    </div>
    <div class="clear"></div>
    <div id="footer">&copy; Сайт-звіт до лабораторних робіт студента (ки) 1 курсу Чжан Чи групи "Фізики"</div>
