--- a/kr2.html
+++ b/kr2.html
@@ -55,12 +55,11 @@
   <div id="container">
    <div id="header">Сайт-звіт до лабораторних робіт студента (ки) 1 курсу групи "Фізики"</div>
    <div id="content">
-    <h2>Звіт до лабораторної роботи №9. Тема - Гугл презентація</h2>
-    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vT03RhKtEumYnMQxjKen7YbBJb0Xe9rksR880Qsor8Yhs5Oa6b057fXOQOvTCbzPdO1IkzyuYy5BhMT/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-   <p><a href="lab9.pptx">Завантажити у форматі pptx</a></p>
-    <p><a href="lab9.odp">Завантажити у форматі odpx</a></p>
-    <p><a href="https://docs.google.com/presentation/d/e/2PACX-1vT03RhKtEumYnMQxjKen7YbBJb0Xe9rksR880Qsor8Yhs5Oa6b057fXOQOvTCbzPdO1IkzyuYy5BhMT/pub?start=false&loop=false&delayms=3000">Переглянути з Гугл диску</a></p>
-   <iframe src="lab9.pdf" width="100%" height="500"></iframe>
+    <h2>Звіт до контрольної роботи №2. Тема - Табличний редактор</h2>
+    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQJoSC6enDPn_rWQoB-O5e0o8kZD00oCEOf1sMZzb8bz3BdC-Jt35nanZSgQiJkT3eOSbf5gWg4nFm9/pubhtml?widget=true&amp;headers=false"></iframe>
+   <p><a href="kr2.xlsx">Завантажити у форматі docx</a></p>
+    <p><a href="kr2.ods">Завантажити у форматі odpt</a></p>
+    <p><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQJoSC6enDPn_rWQoB-O5e0o8kZD00oCEOf1sMZzb8bz3BdC-Jt35nanZSgQiJkT3eOSbf5gWg4nFm9/pubhtml">Переглянути з Гугл диску</a></p>
    </div>
    <div id="sidebar">
    <p><a href="index.html">Домашня сторінка</a></p>
