--- a/kr2.html
+++ b/kr2.html
@@ -57,7 +57,7 @@
    <div id="content">
     <h2>Звіт до контрольної роботи №2. Тема - Табличний редактор</h2>
     <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQJoSC6enDPn_rWQoB-O5e0o8kZD00oCEOf1sMZzb8bz3BdC-Jt35nanZSgQiJkT3eOSbf5gWg4nFm9/pubhtml?widget=true&amp;headers=false"></iframe>
-   <p><a href="kr2.xlsx">Завантажити у форматі docx</a></p>
+   <p><a href="kr2.xlsx">Завантажити у форматі xlsx</a></p>
     <p><a href="kr2.ods">Завантажити у форматі odpt</a></p>
     <p><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQJoSC6enDPn_rWQoB-O5e0o8kZD00oCEOf1sMZzb8bz3BdC-Jt35nanZSgQiJkT3eOSbf5gWg4nFm9/pubhtml">Переглянути з Гугл диску</a></p>
    </div>
