--- a/kr1.html
+++ b/kr1.html
@@ -56,7 +56,7 @@
    <div id="header">Сайт-звіт до лабораторних робіт студента (ки) 1 курсу групи "Фізики"</div>
    <div id="content">
     <h2>Звіт до контрольної роботи №1. Тема -  Текстовий редактор</h2>
-    <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ6lJhP5AOKzA_kCumNrn72umX-eV_JXOioz_4zZq4C0HKgaRZYcprfmVqWnDLqXnBmpe7KVLD3DT38/pub?embedded=true"></iframe>
+    <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ6lJhP5AOKzA_kCumNrn72umX-eV_JXOioz_4zZq4C0HKgaRZYcprfmVqWnDLqXnBmpe7KVLD3DT38/pub?embedded=true" width="100%" height="500"></iframe>
     <p><a href="kr1.docx">Завантажити у форматі docx</a></p>
     <p><a href="kr1.odt">Завантажити у форматі odpt</a></p>
     <p><a href="https://docs.google.com/document/d/e/2PACX-1vQ6lJhP5AOKzA_kCumNrn72umX-eV_JXOioz_4zZq4C0HKgaRZYcprfmVqWnDLqXnBmpe7KVLD3DT38/pub">Переглянути з Гугл диску</a></p>
