--- a/lab5.html
+++ b/lab5.html
@@ -56,7 +56,7 @@
    <div id="header">Сайт-звіт до лабораторних робіт студента (ки) 1 курсу Чжан Чи групи "Фізики"</div>
    <div id="content">
     <h2>Звіт до лабораторної роботи №5. Тема - Табличний процессор</h2>
-    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTtcUjZWkwqFIsKTdP4bpSpCkrNLedkfJVI2cUzm4yiaOyUnxT-TaC5FBdcDgI7zFvoGnpJ8hJ8SUuu/pubhtml?widget=true&amp;headers=false"></iframe>
+    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTtcUjZWkwqFIsKTdP4bpSpCkrNLedkfJVI2cUzm4yiaOyUnxT-TaC5FBdcDgI7zFvoGnpJ8hJ8SUuu/pubhtml?widget=true&amp;headers=false" width="100%" height="500"></iframe>
     <p><a href="lab5.xlsx"> Завантажити у форматі xlsx</a></p>
     <p><a href="lab5.ods"> Завантажити у форматі ods</a></p>
     <p><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTtcUjZWkwqFIsKTdP4bpSpCkrNLedkfJVI2cUzm4yiaOyUnxT-TaC5FBdcDgI7zFvoGnpJ8hJ8SUuu/pubhtml">Переглянути з Гугл диску</a></p>
