--- a/lab7.html
+++ b/lab7.html
@@ -56,7 +56,7 @@
    <div id="header">Сайт-звіт до лабораторних робіт студента (ки) 1 курсу групи "Фізики"</div>
    <div id="content">
     <h2>Звіт до лабораторної роботи №7. Тема -  Адресація</h2>
-    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS4KNwfxhVwbzZhpiIhVpiWlXw_lG1F2sC0aTUy2s7WBr1ZyKjdqkcQvV78B7yoTQ/pubhtml?widget=true&amp;headers=false"></iframe>
+    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS4KNwfxhVwbzZhpiIhVpiWlXw_lG1F2sC0aTUy2s7WBr1ZyKjdqkcQvV78B7yoTQ/pubhtml?widget=true&amp;headers=false" width="100%" height="500"></iframe>
     <p><a href="lab7.xlsx.ods"> Завантажити у форматі xlsx.ods</a></p>
     <p><a href="lab7.xlsx"> Завантажити у форматі xlsx</a></p>
     <p><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vS4KNwfxhVwbzZhpiIhVpiWlXw_lG1F2sC0aTUy2s7WBr1ZyKjdqkcQvV78B7yoTQ/pubhtml"> Переглянути з Гугл диску</a></p>
