--- a/lab8.html
+++ b/lab8.html
@@ -56,7 +56,7 @@
    <div id="header">Сайт-звіт до лабораторних робіт студента (ки) 1 курсу Чжан Чи групи "Фізики"</div>
    <div id="content">
     <h2>Звіт до лабораторної роботи №8. Тема -  Презентація з БЖД</h2>
-   <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTBQbuZATDaKASS61NbwQKev0UrW4bzSRiX97QqaLlIpuV1VTycUOKwkFTvm_dJwA/embed?start=false&loop=false&delayms=3000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+   <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTBQbuZATDaKASS61NbwQKev0UrW4bzSRiX97QqaLlIpuV1VTycUOKwkFTvm_dJwA/embed?start=false&loop=false&delayms=3000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" width="100%" height="500"></iframe>
      <p><a href="lab8.pptx">Завантажити у форматі pptx</a></p>
     <p><a href="lab8.pptx.odp">Завантажити у форматі odp</a></p>
     <iframe src="lab8.pptx.pdf" width="100%" height="500"></iframe>
