--- a/lab1.html
+++ b/lab1.html
@@ -56,7 +56,7 @@
    <div id="header">Сайт-звіт до лабораторних робіт студента (ки) 1 курсу Чжан Чи групи "Фізики"</div>
    <div id="content">
     <h2>Звіт до лабораторної роботи №1. Тема - Текстовий процесор</h2>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vSrd36lzEu3ZXJ6WSdr5L56U-WlsAK_11_wKlKETXUe8UkcFOCXJB6eoRplkU-1P6qEKaRI00rg2b8H/pub?embedded=true"></iframe>
+  <iframe src="https://docs.google.com/document/d/e/2PACX-1vSrd36lzEu3ZXJ6WSdr5L56U-WlsAK_11_wKlKETXUe8UkcFOCXJB6eoRplkU-1P6qEKaRI00rg2b8H/pub?embedded=true" width="100%" height="500"></iframe>
     <p><a href="lab1.docx"> Завантажити у форматі docx</a></p>
     <p><a href="lab1.odt"> Завантажити у форматі odt</a></p>
    <p><a href="https://docs.google.com/document/d/e/2PACX-1vSrd36lzEu3ZXJ6WSdr5L56U-WlsAK_11_wKlKETXUe8UkcFOCXJB6eoRplkU-1P6qEKaRI00rg2b8H/pub"> Переглянути з Гугл диску</a></p>      
