--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     
    </div>
    <div class="clear"></div>
-   <div id="footer">&copy; Лабороторна робота №1 2 семесру студентки 1 курсу групи "Фізики"></div>
+  <div id="footer">&copy; Сайт-звіт до лабораторних робіт студента (ки) 1 курсу Чжан Чи групи "Фізики"</div>
   </div>
  </body>
 </html>
