--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
     <p><a href="lab9.html">Звіт до лабораторної роботи №9. Тема - Гугл презентація</a></p>
     <p><a href="kr1.html">Звіт до контрольної роботи №1. Тема -  Текстовий редактор </a></p>
     <p><a href="kr2.html">Звіт до контрольної роботи №2. Тема - Табличний редактор </a></p>
-    <p><a href="lab4.html">Звіт до лабораторної роботи №4 в середовищі WXMAXIMA </a></p>
-    <p><a href="lab5.html">Звіт до лабораторної роботи №5 в середовищі WXMAXIMA </a></p>
-    <p><a href="lab6.html">Звіт до лабораторної роботи №6 в середовищі WXMAXIMA </a></p>
-    <p><a href="lab7.html">Звіт до лабораторної роботи №7 в середовищі WXMAXIMA </a></p>
+    <p><a href="lab.4.html">Звіт до лабораторної роботи №4 в середовищі WXMAXIMA </a></p>
+    <p><a href="lab.5.html">Звіт до лабораторної роботи №5 в середовищі WXMAXIMA </a></p>
+    <p><a href="lab.6.html">Звіт до лабораторної роботи №6 в середовищі WXMAXIMA </a></p>
+    <p><a href="lab.7.html">Звіт до лабораторної роботи №7 в середовищі WXMAXIMA </a></p>
     <p><a href="kr.html">Звіт до контрольної роботи №1 в середовищі WXMAXIMA </a></p>
     <p><a href="javascript.html">Управління об'єктами гіпертекстового документу. Мова JavaScript</a></p>
     
