--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Сайт-звіт до лабораторних робіт студента (ки) 1 курсу групи "Фізики"</title>
   <style type="text/css">
    body {
-    font: 10pt Arial, Helvetica, sans-serif; /* Шрифт на веб-странице */
-    background: #54463d; /* Цвет фона */
+    font-family: Georgia, 'Times New Roman', Times, serif; 10px; /* Шрифт на веб-странице */
+    background: #FFA07A; /* Цвет фона */
     margin: 0; /* Убираем отступы */
    }
    h2 {
